<resources>
    <string name="app_name">Dictionary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">WordSmith</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_favourites">Favourite</string>
    <string name="menu_history">History</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_result">English</string>
</resources>