<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_favorite_outlined"
            android:title="@string/menu_favourites" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_recent"
            android:title="@string/menu_history" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_about_us" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/menu_exit" />
    </group>
</menu>