<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.codedev.dictionary.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_wordResultFragment"
            app:destination="@id/wordResultFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_search"
        android:name="com.codedev.dictionary.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_nav_search_to_wordResultFragment"
            app:destination="@id/wordResultFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_favourites"
        android:name="com.codedev.dictionary.ui.favourite.FavouriteFragment"
        android:label="@string/menu_favourites"
        tools:layout="@layout/fragment_favourite" >
        <action
            android:id="@+id/action_nav_favourites_to_wordResultFragment"
            app:destination="@id/wordResultFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_history"
        android:name="com.codedev.dictionary.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history"
        >
        <action
            android:id="@+id/action_nav_history_to_wordResultFragment"
            app:destination="@id/wordResultFragment" />
    </fragment>
    <fragment
        android:id="@+id/wordResultFragment"
        android:name="com.codedev.dictionary.ui.word_result.WordResultFragment"
        android:label="@string/menu_result"
        tools:layout="@layout/fragment_word_result"
        >
        <argument
            android:name="word"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.codedev.dictionary.ui.about_us.AboutUsFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about_us"
        />

    <dialog
        android:id="@+id/nav_exit"
        android:name="com.codedev.dictionary.ui.exit.ExitFragment"
        android:label="@string/menu_exit"
        tools:layout="@layout/fragment_about_us"
        />

    <action
        android:id="@+id/action_to_exit_fragment"
        app:destination="@id/nav_exit"/>

</navigation>